"Print Preview Error: An error occurred while printing." - When printing the glossary of math symbols
Categories
(Core :: Printing: Output, defect)
Tracking
()
People
(Reporter: Dexter, Assigned: jfkthame, NeedInfo)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(3 files)
As reported on StackOverflow, attempting to print this page (even with "Print as PDF" or simiar) results in the error "Print Preview Error: An error occurred while printing." right after hitting the "Print" button, on the print options dialog.
No error occurs in the print preview.
Comment 1•4 years ago
|
||
I got this "Failed to create rendering context for print." warning on a debug build.
Oh yeah
Crash Annotation GraphicsCriticalError: |[0][GFX1-]: Failed to create draw target in device context sized 47680x67360 and pointer 0x7f874404d220 (t=24.8445) [GFX1-]: Failed to create draw target in device context sized 47680x67360 and pointer 0x7f874404d220
Looks like the canvas size is too large.
Comment 2•4 years ago
|
||
Do we know if this is a regression?
Comment 3•4 years ago
|
||
Answering my own question: Yes, this is a regression, with this regression range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=e02533b47a679aeeaa52bb5a88e04cdbbfc251e2&tochange=26b31c2612b4b6ea5b1771b3bdef1031f457a98f
--> Regression from bug 454059
jfkthame, could you take a look?
Updated•4 years ago
|
Comment 4•4 years ago
|
||
Here's a partially reduced testcase, which triggers the bug for me (printed on Ubuntu 21.10 in Firefox Nightly with "Save to PDF" print target and US-Letter page size).
Comment 5•4 years ago
|
||
Updated•4 years ago
|
Comment 6•4 years ago
|
||
Set release status flags based on info from the regressing bug 454059
Updated•4 years ago
|
| Assignee | ||
Comment 7•4 years ago
|
||
Updated•4 years ago
|
| Assignee | ||
Comment 8•4 years ago
•
|
||
Adrian, as you'll see in the attached patch (comment 7), I'm finding that if the link URI being passed in the attribute string to cairo_tag_begin contains a backslash, I have to doubly escape the \ (i.e. replace a single \ with four \\\\s) in order for the cairo-pdf-interchange backend to generate the link properly. This seems unexpected to me; is it possible a cairo bug?
(I haven't yet tried to reproduce this with a standalone test and current cairo master, but skimming the cairo commit logs I didn't notice anything that looked like a recent fix. But you may know otherwise...)
| Assignee | ||
Comment 9•4 years ago
|
||
OK, I've confirmed the same issue reproduces in a simple test with cairo master, so it's not anything weird we're doing in gecko. Filed https://gitlab.freedesktop.org/cairo/cairo/-/issues/526 upstream about it.
Comment 10•4 years ago
|
||
Comment 11•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Comment 12•3 years ago
|
||
I was able to reproduce the issue on Win10, build 95.0a1 (20211020093007).
Verified as fixed on Win10/Ubuntu20.4/Mac 10.13 using builds 97.0b8 (20220125201015) and 98.0a1(20220125190421).
Updated•3 years ago
|
Description
•