Bug 1748077 - Escape any backslashes in the URL when creating PDF links via cairo. r=gfx-reviewers,jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D135227